# axum-rest-openapi

./: .gitignore  Cargo.toml  README.md
migrations/: 20251025155244_init.sql
src/: api.rs  auth.rs  main.rs  routes.rs  state.rs
